--- a/jsProject.html
+++ b/jsProject.html
@@ -5,7 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>jsProject</title>
     <link rel="stylesheet" href="jsProject.css">
     <link rel="stylesheet" href="tablet.css">
     <link rel="stylesheet" href="phone.css">
